[package]
name = "sync-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
dashmap = "4.0"
ouroboros = "0.15.1"
primitive-types = { version = "0.8.0", features = ["rlp", "serde"] }
rlp = "0.5.0"
rocksdb = "0.17.0"
#rocksdb_lib = { package = "rocksdb", git = "https://github.com/velas/rust-rocksdb", branch = "transaction", version = "0.17.0", default-features = false, optional = true }
serde = { version = "1.0.123", features = ["derive"] }
